# caramell

./: ARCHITECURE.md  Cargo.toml  IDEAS.md  README.md  ROADMAP.md
.github/workflows/: ci.yml
crates/caramell/: Cargo.toml  README.md
crates/caramell-cli/: Cargo.toml
crates/caramell-cli/src/: main.rs
crates/caramell/src/: chords.rs  lexer.rs  lib.rs  parser.rs  pitch.rs  printing.rs
crates/chordparser/: Cargo.toml
crates/chordparser/src/: lexer.rs  lib.rs  pitch.rs
crates/leadsheet/: Cargo.toml
crates/leadsheet/src/: lib.rs
examples/: chords.cho
examples/input/: BSS_fighting.cho  allstar.cho  chords.cho  rickroll.cho
old/: parser.rs  pratt.rs
old/chords/: mod.rs
old/lyrics/: mod.rs
src/: main.rs
