[package]
name = "caramell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7"
chordparser = { path = "crates/chordparser" }

[workspace]
members = [
    "crates/cli",
    "crates/chordparser",
    "crates/leadsheet"
]